# zfs-io

./: Cargo.toml  README.md
crates/zfsio-app/: Cargo.toml
crates/zfsio-app/src/: main.rs
crates/zfsio-collector/: Cargo.toml
crates/zfsio-collector/fixtures/: arcstats.sample  pool_io_first.sample  pool_io_second.sample
crates/zfsio-collector/src/: lib.rs
crates/zfsio-model/: Cargo.toml
crates/zfsio-model/src/: lib.rs
crates/zfsio-tui/: Cargo.toml
crates/zfsio-tui/src/: lib.rs
