[workspace]
members = [
  "crates/zfsio-app",
  "crates/zfsio-collector",
  "crates/zfsio-model",
  "crates/zfsio-tui",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "GPL-3.0-only"
repository = "https://example.invalid/zfs-io"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
ratatui = "0.29"
tokio = { version = "1", features = ["macros", "process", "rt-multi-thread", "signal", "sync", "time"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
