[package]
name = "zfs-io"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[[bin]]
name = "zfs-io"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
ratatui.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true
zfsio-collector = { path = "../zfsio-collector" }
zfsio-model = { path = "../zfsio-model" }
zfsio-tui = { path = "../zfsio-tui" }
